# DjinniDemo

./: .gitignore  run_djinni.sh
android_project/HelloWorld/: build.gradle
android_project/HelloWorld/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android_project/HelloWorld/app/src/androidTest/java/com/djinnidemo/charlesso/helloworld/: ExampleInstrumentedTest.java
android_project/HelloWorld/app/src/main/: AndroidManifest.xml
android_project/HelloWorld/app/src/main/java/com/djinnidemo/charlesso/helloworld/: MainActivity.java
android_project/HelloWorld/app/src/test/java/com/djinnidemo/charlesso/helloworld/: ExampleUnitTest.java
android_project/HelloWorld/gradle/wrapper/: gradle-wrapper.properties
xcode_project/HelloWorld/Hello World iOS/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m
xcode_project/HelloWorld/Hello World iOS/Supporting Files/: main.mm
xcode_project/HelloWorld/HelloWorld/: hello_world_impl.cpp  main.cpp
xcode_project/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
xcode_project/HelloWorld/HelloWorld.xcodeproj/project.xcworkspace/xcuserdata/charlesso.xcuserdatad/: UserInterfaceState.xcuserstate
xcode_project/HelloWorld/HelloWorld.xcodeproj/xcuserdata/charlesso.xcuserdatad/xcschemes/: xcschememanagement.plist
